// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default 1`] = `
.c0 {
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Open Sans',sans-serif;
  min-height: 60px;
}

.c2 {
  width: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 20%;
  max-width: 20%;
  text-transform: uppercase;
  overflow-wrap: break-word;
  font-weight: 600;
}

.c3 {
  border: 1px solid black;
  height: 30px;
  padding: 5px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="default"
  >
    default
  </label>
  <div
    className="c2"
    type="text"
  >
    <input
      className="c3"
      id="default"
      type="text"
    />
    
  </div>
</div>
`;

exports[`Input monetary 1`] = `
.c0 {
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Open Sans',sans-serif;
  min-height: 60px;
}

.c2 {
  width: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 20%;
  max-width: 20%;
  text-transform: uppercase;
  overflow-wrap: break-word;
  font-weight: 600;
}

.c3 {
  border: 1px solid black;
  height: 30px;
  padding: 5px;
}

.c4 {
  margin-left: 5px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="value"
  >
    money related
  </label>
  <div
    className="c2"
    type="text"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <input
        className="c3"
        id="value"
        type="number"
      />
      <span
        className="c4"
      >
        GBP
      </span>
    </div>
    
  </div>
</div>
`;
